added some new line

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>My second github repo</title>
 </head>
 <body>
-    
+    <h1>Hi im trying to learn github today</h1>
+    <h2>it is the way to save your code online</h2>
+    <h3>you need to know how to use terminal well and how to wright command on it to deliver your codes to github perfectly</h3>
 </body>
 </html>
