--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My second github repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hi im trying to learn github today</h1>
+    <h1 class="a">Hi im trying to learn github today</h1>
     <h2>it is the way to save your code online</h2>
-    <h3>you need to know how to use terminal well and how to wright command on it to deliver your codes to github perfectly</h3>
+    <h3 class="b">you need to know how to use terminal well and how to wright command on it to deliver your codes to github perfectly</h3>
 </body>
 </html>
