--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <h1 class="a">Hi im trying to learn github today</h1>
     <h2>it is the way to save your code online</h2>
     <h3 class="b">you need to know how to use terminal well and how to wright command on it to deliver your codes to github perfectly</h3>
+    <img src="1636293868291.gif" alt="No image">
+    <img src="competitors-ads-everywhere.gif" alt="No image">
 </body>
 </html>
