--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <h3 class="b">you need to know how to use terminal well and how to wright command on it to deliver your codes to github perfectly</h3>
     <img src="1636293868291.gif" alt="No image">
     <img src="competitors-ads-everywhere.gif" alt="No image">
+    <img src="giphy (1).gif" alt="">
 </body>
 </html>
